//Character
public enum CharacterState
{
    Idle,
    Move, 
    PunchLeft,
    PunchRight, 
    PunchUppercut,
    PunchStraight,
    Dodge,
    Stunned,
    HeadHit,
    KidneyHitLeft,
    KidneyHitRight,
    StomachHit,
    Dead
}

public enum BodyPart
{
    Head,
    LeftHand,
    RightHand,
    Belly
}

public enum TeamType
{
    Ally,
    Enemy
}